--- a/01_canvas基本使用.html
+++ b/01_canvas基本使用.html
@@ -10,6 +10,14 @@
     <canvas id="canvas" width="600" height="600">
       当前浏览器版本不支持，请升级浏览器
     </canvas>
-    <script></script>
+    <script>
+      var canvas = document.getElementById('canvas');
+      // 所有的图像绘制都是通过ctx属性或者方法进行设置，和canvas标签没有关系
+      var ctx = canvas.getContext('2d');
+      // 设置颜色
+      ctx.fillStyle = 'green';
+      // 绘制图形
+      ctx.fillRect(100, 100, 100, 100);
+    </script>
   </body>
 </html>
