--- a/02_canvas的动画.html
+++ b/02_canvas的动画.html
@@ -7,7 +7,24 @@
     <title>Document</title>
   </head>
   <body>
-    <canvas id="canvas" width="600" height="600"></canvas>
-    <script></script>
+    <canvas id="canvas" width="600" height="600">
+      当前浏览器版本不支持，请升级浏览器
+    </canvas>
+    <script>
+      const canvas = document.getElementById('canvas');
+      // 所有的图像绘制都是通过ctx属性或者方法进行设置，和canvas标签没有关系
+      const ctx = canvas.getContext('2d');
+      // 设置颜色
+      ctx.fillStyle = 'green';
+      // 信号量
+      let left = 100;
+
+      setInterval(() => {
+        ctx.clearRect(100, 100, 600, 600);
+        left++;
+        ctx.fillRect(left, 100, 100, 100);
+      }, 30);
+      // 绘制图形
+    </script>
   </body>
 </html>
